--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Peet Hack</title>
     <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-     <section id="navigation">
-       <div class="navigation" >
+     <section id="navbar">
+       <div class="navbar">
         <nav>
           <ul class="navigation">
-            <li><!--<img src="icon.jpg" width="100" height="80" style="margin-top: 10px" style="margin-bottom: 10px">--></li>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
@@ -54,7 +53,7 @@
                       </p>
               </div>
               <div id="footer">
-                <p>Footer</p>
+                <p>Footer  </p>
               </div>
             </div>
     </section>
