--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
                         <img src="Resources/Logo2.png" alt="" width="70" height="40"/>
                     </li>
                     <li class="top-right">
-                        <a href="#contacts">
+                        <a href="contacts.html">
                             Contacts
                         </a>
                     </li>
                     <li class="top-right">
-                        <a href="#about">
-                            About Me
+                        <a href="resume.html">
+                            Resume'
                         </a>
                     </li>
                     <li class="top-right">
-                        <a href="#portfolio">
+                        <a href="portfolio.html">
                             Portfolio
                         </a>
                     </li>
                     <li class="top-right">
-                        <a href="#resume">Resume'</a>
+                        <a href="index.html">Home'</a>
                     </li>
                 </ul>
             </div>
