remove line in the index page

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <div class="middle">
                 <div class="left">
                     <h2 id="bold_category">UI <span style="color: rgb(143, 87 , 29);">/</span> UX</h2>
-                    <p>  Designer</p>
+                    <p>Designer</p>
                 </div>
-                <div class="vertical_line" style="height: 100px;"></div>
+                <!-- <div class="vertical_line" style="height: 50px;"></div> -->
                 <div class="right">
                     <h2 id="bold_category">CODE</h2>
-                    <p>Ninja</p>
+                    <p>ninja</p>
                 </div>
             </div>
         </div>
