--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                     <li class="top-right">
                         <a href="index.html">Home'</a>
                     </li>
-                </ul> 
+                </ul>
             </div>
             <div class="middle">
                 <div class="left">
                     <h2 id="bold_category">UI <span style="color: rgb(143, 87 , 29);">/</span> UX</h2>
                     <p>  Designer</p>
                 </div>
-                <div class="vertical_line" style="height: 100px;"></div>
+                <!-- <div class="vertical_line" style="height: 100px;"></div> -->
                 <div class="right">
                     <h2 id="bold_category">CODE</h2>
                     <p>Ninja</p>
