add contacts link to resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,18 +16,18 @@
                     <img src="Resources/Logo2.png" alt="" width="70" height="40"/>
                 </li>
                 <li class="top-right">
-                    <a href="contacts.html">
-                        Contacts
-                    </a>
-                </li>
-                <li class="top-right">
                     <a href="resume.html">
-                        Resume'
+                        Contacts
                     </a>
                 </li>
                 <li class="top-right">
                     <a href="portfolio.html">
                         Portfolio
+                    </a>
+                </li>
+                <li class="top-right">
+                    <a href="resume.html">
+                        Resume'
                     </a>
                 </li>
                 <li class="top-right">
