add skills to resume

--- a/resume.html
+++ b/resume.html
@@ -86,24 +86,29 @@
                     <div class="bottom-item bottom-item-left">
                         <p class="title"><span>Achievements</span></p>
                         <div class="desc">
-                            <div>
-                                ALC&nbsp;<span>Android&nbsp;Basics.</span><br/>
+                            <!-- <div>
+                                ALC&nbsp;<span style="color:rgb(211,211,211);">Android&nbsp;Basics.</span><br/>
                                 -IBM<br/><br/>
+                            </div> -->
+                            <div class="alc">
+                                <div style="display: inline-flex;"><img src="Resources/ccna.png" alt="" height="24" width="24" /></div>
+                                &nbsp;&nbsp;
+                                <div style="display: inline-flex;color:rgb(211,211,211);"><span>ALC</span>&nbsp;Android basics<br/>-Andela</div>
                             </div>
                             <div class="first">
                                 <div style="display: inline-flex;"><img src="Resources/ccna.png" alt="" height="24" width="24" /></div>
                                 &nbsp;&nbsp;
-                                <div style="display: inline-flex;"><span>Ccna</span>&nbsp;Switching and Routing<br/>-Cisco</div>
+                                <div style="display: inline-flex;color:rgb(211,211,211);"><span>Ccna</span>&nbsp;Switching and Routing<br/>-Cisco</div>
                             </div>
                             <div class="sec">
                                 <div style="display: inline-flex;"><img src="Resources/cloud_intro.png" alt="" height="24" width="24" /></div>
                                 &nbsp;&nbsp;
-                                <div style="display: inline-flex; margin-top: -100px;"><span>Cloud</span>&nbsp;Cloud Computing<br/>-IBM</div>
+                                <div style="display: inline-flex; margin-top: -100px;color:rgb(211,211,211);"><span>Cloud</span>&nbsp;Cloud Computing<br/>-IBM</div>
                             </div>
                             <div class="third">
                                 <div style="display: inline-flex;"><img src="Resources/iat.png" alt="" height="24" width="24" /></div>
                                 &nbsp;&nbsp;
-                                <div style="display: inline-flex;"><span>ICDL</span>&nbsp;Spreadsheets<br/>-IAT</div>
+                                <div style="display: inline-flex;color:rgb(211,211,211);"><span>ICDL</span>&nbsp;Spreadsheets<br/>-IAT</div>
                             </div>
                         </div>
                     </div>
