fix overlay on resume.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,5 +35,31 @@
                 </li>
             </ul>
         </div>
+        <div class="top_spacer"></div>
+        <div class="portfolio_container">
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
