--- a/resume.html
+++ b/resume.html
@@ -5,10 +5,40 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="author" content="Peter Wachira"/>
-        <link rel="stylesheet" href="stylesresume.css" />
+        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="stylesresume.css"/>
     </head>
     <body>
-        <div class="flex-container">
+    <div class="down"></div>
+      <div class="main">
+        <div class="top">
+            <ul>
+                <li class = "top-left">
+                    <img src="Resources/Logo2.png" alt="" width="70" height="40"/>
+                </li>
+                <li class="top-right">
+                    <a href="contacts.html">
+                        Contacts
+                    </a>
+                </li>
+                <li class="top-right">
+                    <a href="resume.html">
+                        Resume'
+                    </a>
+                </li>
+                <li class="top-right">
+                    <a href="portfolio.html">
+                        Portfolio
+                    </a>
+                </li>
+                <li class="top-right">
+                    <a href="index.html">Home'</a>
+                </li>
+            </ul>
+        </div>
+      </div>
+        <div style="height:150px;width:100%"class="spacer1"></div>
+          <div class="flex-container">
             <aside class="div-left">
                 <img src="Resources/profile.jpg" alt="Profile" width="120" height="120"/>
                 <p>Peter Wachira</p>
