fixed resume paddings

--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
         <div style="height:150px;width:100%"class="spacer1"></div>
           <div class="flex-container">
             <aside class="div-left">
-                <img src="Resources/profile.jpg" alt="Profile" width="120" height="120"/>
+                <img src="Resources/profile.png" alt="Profile" width="120" height="120"/>
                 <p>Peter Wachira</p>
                 <p>Christian <span class="separator">|</span> Tech&nbsp;Enthusiast <span class="separator">|</span>
                     Developer <span class="separator">|</span> UI<span class="separator">/</span>UX&nbsp;Designer <span class="separator">|</span>
@@ -52,11 +52,9 @@
                     <div>
                         <p>2019<br/>peter&nbsp;wachira</p>
                     </div>
-
-                    <div class="cv">CV</div>
+                    <div style="padding-top:100px"class="cv">CV</div>
                     <div class="spacer"></div>
                 </div>
-
                 <div class="flex-sub-container">
                     <div class="item">
                         <p class="title"><span>Work Experience</span>&nbsp;</p>
