fix name under CV title

--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
             <aside class="div-right">
                 <div class="header">
                     <div>
-                        <p>2019<br/>peter&nbsp;wachira</p>
+                        <p style="display:flex;padding-top:80px; color:rgb(211,211,211);font-size:25px"><br/>Peter&nbsp;Wachira</p>
                     </div>
                     <div style="padding-top:100px"class="cv">CV</div>
                     <div class="spacer"></div>
