--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li class="top-right">
-                        <a href="index.html">Home'</a>
+                        <a href="index.html">Home</a>
                     </li>
                 </ul>
             </div>
