add portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="Peter Wachira"/>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="portfolio.css"/>
   </head>
   <body>
     <div class="down"></div>
@@ -31,35 +32,26 @@
                     </a>
                 </li>
                 <li class="top-right">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="top-right">
                     <a href="index.html">Home'</a>
                 </li>
             </ul>
         </div>
         <div class="top_spacer"></div>
         <div class="portfolio_container">
-
-
+            <h3 id="about_me">About me </h3>
+              <div class="about-me">
+                <p id="desc_1">Hello my name is  <span  id="my_name">  Peter Wachira</span>  an aspiring Developer</p><p> My passion for coding started during my highschool years </p><p>I explored this enriching subject undependently. </p> <p>I was entraced by the intricacies of coding and its hidden potentials </p><p> much seemingly dead information can be braught back to life. </p>
+              </div>
+                <div class="middle_spacer"></div>
+                  <h3 id="title_1">Some projects i have worked on</h3>
+                  <div class="last_spacer"></div>
+                    <div class="sub_container">
+                        <p id="desc_2"> <a href="https://peter-wachira.github.io/reunite/"> <span id="reunite">Reunite</span> </a>Website To reunite lost missing people with their families</p>
+                        <p id="desc_2"> <a href="https://peter-wachira.github.io/confectionery/"><span id="confectionery">Sophies Confectionery</span></a>Confectionery Advertising website</p>
+          </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   </body>
 </html>
